--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,1 +1,13 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
+
+body {
+  margin: 0;
+  /* padding-top: calc(2em + 115px); */
+  padding-top: calc(2em + 105px);
+  padding-bottom: 40px;
+}
+
+* {
+  font-family: Roboto, Arial;
+  margin: 0;
+}
