--- a/client/src/app/core/navbar/navbar.component.html
+++ b/client/src/app/core/navbar/navbar.component.html
@@ -1,8 +1,8 @@
 <nav class="navbar">
   <div class="logo-container">
-    <img class="logo" src="assets/images/logo.png" alt="No Logo" />
+    <img class="logo" src="assets/images/header/logo.png" alt="No Logo" />
 
-    <a routerLink="/" class="nav-bar-home-link">
+    <a routerLink="/home" class="nav-bar-home-link">
       <p class="logo-text">
 
         <span class="white bold">DINOSAUR'S </span>
@@ -16,7 +16,7 @@
     <ng-container *ngIf="true; then userSection; else guestSection"></ng-container>
 
     <a routerLink="/cart" class="shopping-cart-container">
-      <img class="shopping-cart-icon" alt="Shopping Cart" src="assets/images/shopping-cart-icon.png" />
+      <img class="shopping-cart-icon" alt="Shopping Cart" src="assets/images/header/shopping-cart-icon.png" />
 
       <!-- Display only if there are cart items -->
       <p class="shopping-cart-item-count">2</p>
@@ -27,7 +27,8 @@
 <ng-template #userSection>
   <div class="user-section navbar-section">
     <a routerLink="/create">Create</a>
-    <a routerLink="/profile">Profile</a>
+    <!-- Not sure if I have time -->
+    <!-- <a routerLink="/profile">Profile</a> -->
     <a routerLink="/logout" class="logout-anchor">
       Logout
     </a>
@@ -37,6 +38,6 @@
 <ng-template #guestSection>
   <div class="guest-section navbar-section">
     <a routerLink="/login">Log In</a>
-    <a routerLink="/register">Sign up</a>
+    <a routerLink="/signup">Sign up</a>
   </div>
 </ng-template>
