Updated error boundary

--- a/client/src/app/core/error-boundary/error-boundary.component.html
+++ b/client/src/app/core/error-boundary/error-boundary.component.html
@@ -3,5 +3,5 @@
 <section *ngIf="error" class="not-found-container">
   <p class="not-found-number">500</p>
   <p class="not-found-title">Ooops!!</p>
-  <p class="not-found-text">Try to refresh the page or feel free to contact us if the problem persists</p>
+  <p class="not-found-text">Try to refresh the page (F5) or feel free to contact us if the problem persists</p>
 </section>
