Added authentication and HTTP Request and error interceptors

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,13 +1,17 @@
-<app-error-boundary>
-  <header>
-    <app-navbar></app-navbar>
-    <app-searchbar></app-searchbar>
-  </header>
+<app-authenticate>
+  <app-error-boundary>
+    <app-error></app-error>
 
-  <main id="main">
-    <app-spinner></app-spinner>
-    <router-outlet></router-outlet>
-  </main>
+    <header>
+      <app-navbar></app-navbar>
+      <app-searchbar></app-searchbar>
+    </header>
 
-  <app-footer></app-footer>
-</app-error-boundary>
+    <main id="main">
+      <!-- <app-spinner></app-spinner> -->
+      <router-outlet></router-outlet>
+    </main>
+
+    <app-footer></app-footer>
+  </app-error-boundary>
+</app-authenticate>
