Added http cancel service and interceptor, also spinner service and signup

--- a/client/src/app/auth/login/login.component.html
+++ b/client/src/app/auth/login/login.component.html
@@ -22,8 +22,8 @@
             characters!</p>
         </ng-container>
       </div>
-      <button class="sign-btn" (click)="onSubmit()" [disabled]="form.invalid"
-        [ngStyle]="{cursor: form.invalid ? 'not-allowed' : ''}">
+      <button class="sign-btn" (click)="onSubmit()" [disabled]="submitted || form.invalid"
+        [ngStyle]="{cursor: submitted || form.invalid ? 'not-allowed' : ''}">
         Login
       </button>
     </form>
