--- a/client/src/app/core/components/searchbar/searchbar.component.html
+++ b/client/src/app/core/components/searchbar/searchbar.component.html
@@ -1,6 +1,7 @@
 <div class="search-container">
-  <form class="search-form">
-    <input class="search-input" name="search" type="text" placeholder="Search..." />
+  <form class="search-form" (submit)="onSubmit($event, searchInput.value)">
+    <input #searchInput class="search-input" name="search" type="text" placeholder="Search..."
+      [value]="search ? search : ''" />
 
     <button type="submit" class="search-button">
       <img class="search-icon" src="assets/images/header/icon-search.png" alt="Search" />
