Added details page

--- a/client/src/app/core/home/home.component.html
+++ b/client/src/app/core/home/home.component.html
@@ -5,7 +5,7 @@
     <p class="site-brief-description">
       Lorem ipsum dolor sit amet consectetur adipisicing elit.
     </p>
-    <a routerLink="/catalog" class="site-get-started-btn">
+    <a [routerLink]="link" class="site-get-started-btn">
       Get Started
     </a>
   </div>
