--- a/client/src/app/core/components/navbar/navbar.component.html
+++ b/client/src/app/core/components/navbar/navbar.component.html
@@ -11,11 +11,6 @@
   </div>
   <div class="right-section">
     <ng-container *ngIf="authService.isUserAuthenticated; then userSection; else guestSection"></ng-container>
-
-    <a routerLink="/cart" class="shopping-cart-container">
-      <img class="shopping-cart-icon" alt="Shopping Cart" src="assets/images/header/shopping-cart-icon.png" />
-      <p *ngIf="cartLength > 0" class="shopping-cart-item-count">{{cartLength}}</p>
-    </a>
   </div>
 </nav>
 
@@ -23,10 +18,13 @@
   <div class="user-section navbar-section">
     <a routerLink="/catalog">Catalog</a>
     <a routerLink="/create">Create</a>
-    <!-- Not sure if I have time -->
-    <!-- <a routerLink="/profile">Profile</a> -->
+    <a routerLink="/profile">Profile</a>
     <a routerLink="/logout" class="logout-anchor">
       Logout
+    </a>
+    <a routerLink="/cart" class="shopping-cart-container">
+      <img class="shopping-cart-icon" alt="Shopping Cart" src="assets/images/header/shopping-cart-icon.png" />
+      <p *ngIf="cartLength > 0" class="shopping-cart-item-count">{{cartLength}}</p>
     </a>
   </div>
 </ng-template>
